<resources>
    <string name="app_name">Book app</string>
    <string name="nextbook">NextBook\n</string>
    <string name="name_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="list_is_empty_create_new">Books list is empty. Create new one!</string>
    <string name="name">Name</string>
    <string name="author">Author</string>
    <string name="year">Year</string>
    <string name="notes">Notes</string>
    <string name="add_new">Add New</string>
</resources>