<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.kononenko.kp32.new_book.NewBookViewModel" />
        <import type="android.view.View"/>
    </data>

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        android:gravity="center"
        tools:context="com.kononenko.kp32.new_book.NewBookActivity">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:text="@={viewModel.newBookModelMutableLiveData.name}"/>
        <EditText
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/author"
            android:text="@={viewModel.newBookModelMutableLiveData.author}"/>
        <EditText
            android:id="@+id/pages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/year"
            android:inputType="number"
            android:text="@={viewModel.newBookModelMutableLiveData.year}"/>
        <EditText
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes"
            android:text="@={viewModel.newBookModelMutableLiveData.notes}"/>

        <Button
            android:id="@+id/addNewBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new"
            android:layout_marginVertical="12dp"
            android:onClick="@{viewModel::onSaveClicked}"
            />

    </LinearLayout>
</layout>